{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 34,
  "lineage": "06f8f00f-31dd-784b-e643-6bc4cb34b703",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-12T02:16:03.163-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-connect-sap26blr-307/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/global/networks/terraform-hackathon-network",
            "priority": 1000,
            "project": "ai-connect-sap26blr-307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "hackathon-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5173",
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-12T02:16:03.160-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-connect-sap26blr-307/global/firewalls/allow-frontend-backend",
            "log_config": [],
            "name": "allow-frontend-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/global/networks/terraform-hackathon-network",
            "priority": 1000,
            "project": "ai-connect-sap26blr-307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/global/firewalls/allow-frontend-backend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "hackathon-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/zones/us-central1-c/disks/terraform-hackathon-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ai-connect-sap26blr-307/zones/us-central1-c/instances/terraform-hackathon-vm",
            "instance_id": "6504909375103047435",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "startup-script": "#!/bin/bash\nset -euxo pipefail\n\nLOG=/var/log/startup-script.log\nexec \u003e \u003e(tee -a \"$LOG\") 2\u003e\u00261\n\necho \"===== GCE startup script started =====\"\ndate\n\necho \"===== Installing base packages =====\"\napt-get update\napt-get install -y curl git ca-certificates\n\necho \"===== Installing Docker =====\"\ncurl -fsSL https://get.docker.com | sh\nsystemctl enable docker\nsystemctl start docker\n\necho \"===== Waiting for Docker daemon =====\"\ [...]
            },
            "metadata_fingerprint": "9cIeF98-hvY=",
            "name": "terraform-hackathon-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.60.172.153",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/global/networks/terraform-hackathon-network",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/regions/us-central1/subnetworks/terraform-hackathon-network",
                "subnetwork_project": "ai-connect-sap26blr-307"
              }
            ],
            "project": "ai-connect-sap26blr-307",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/zones/us-central1-c/instances/terraform-hackathon-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "hackathon-vm"
            ],
            "tags_fingerprint": "n_GtC7ArdNU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ai-connect-sap26blr-307/global/networks/terraform-hackathon-network",
            "mtu": 0,
            "name": "terraform-hackathon-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3488098039717959363",
            "project": "ai-connect-sap26blr-307",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-connect-sap26blr-307/global/networks/terraform-hackathon-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}